# rust-sharing-arbitrary-with-feature-gates

./: Cargo.toml  README.md
crates/a/: Cargo.toml
crates/a/src/: lib.rs
crates/b-needs-a/: Cargo.toml
crates/b-needs-a/src/: lib.rs
crates/c-needs-b-and-a/: Cargo.toml
crates/c-needs-b-and-a/src/: lib.rs
crates/d-needs-just-b/: Cargo.toml
crates/d-needs-just-b/src/: lib.rs
