[package]
name = "b-needs-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a = { path = "../a"}
arbtest = {workspace = true, optional = true}

[dev-dependencies]
a = { path = "../a", features = ["tests"]}
arbtest= {workspace = true, features = ["derive"] }

[features]
tests = ["arbtest/derive",
    # needs to export this because A/arbitrary is a compile time dependency otherwise `D` will fail
    "a/tests"
]